# DeCompASM

./: CMakeLists.txt  LICENSE  README.md  buildrun.sh  commands.txt
src/: assembler.cpp  assembler.hpp  main.cpp
tests/: CMakeLists.txt  error_test.txt  main.cpp  test.txt
